[frontend] Fix compose dialog overflowing screen width

--- a/Iceshrimp.Frontend/Components/Compose.razor.css
+++ b/Iceshrimp.Frontend/Components/Compose.razor.css
@@ -5,7 +5,7 @@
     top: 10%;
     padding: 1rem;
     position: relative;
-    width: 45rem;
+    max-width: 45rem;
 }
 
 .dialog {
